Bug 917021:  We should not store the NormalPositionProperty on all frames, only relatively positioned ones.  r=dholbert  approval-mozilla-aurora=lsblakk

This also fixes nsHTMLReflowState::ApplyRelativePositioning to no-op for
svg:text, as it should (since nsIFrame::IsRelativelyPositioned() checks
more than nsStyleDisplay::IsRelativelyPositionedStyle()).